--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                    <nav class="nav w-100 position-absolute d-flex justify-content-between top-0 start-0">
                     <div class="col-lg-3 col-sm-4 col-7 position-relative">
                         <a href="./index.html">
-                            <img src="assets/img/png/logo.png" alt="logo.png" class="logo w-100 position-absolute">
+                            <img loading="lazy" src="assets/img/png/logo.png" alt="logo.png" class="logo w-100 position-absolute">
                         </a>
                     </div>
                     <div class="col-lg-7 col-md-6">
@@ -86,7 +86,7 @@
                 <div class="col-lg-9 m-auto text-center px-lg-4 position-relative advantages-title">
                     <p class="advantages__sub-title fw-semibold">Анонимный просмотр сторис в Инстаграм</p>
                     <p class="advantages__text">Быть в курсе всех событий интересующего человека просто - достаточно использовать наш бесплатный сервис Insta Navigation. Особенность нашего ресурса заключается в полной анонимности пользователя, что позволяет следить за историями, прямыми эфирами, фотографиями, лайками, читать комменты, мониторить фолловеров и т.д.</p>
-                    <img src="assets/img/png/cube.png" alt="cube.png" class="cube1 position-absolute">
+                    <img loading="lazy" src="assets/img/png/cube.png" alt="cube.png" class="cube1 position-absolute">
                 </div>
             </div>
             <div class="row advantages-item text-center text-lg-start">
@@ -97,10 +97,10 @@
                 </div>
                 <div class="col-lg-7 ps-5 col-12 justify-content-center justify-content-lg-center mt-5 mt-lg-0">
                     <div class="ellipse">
-                        <img src="assets/img/png/e1.png" alt="" class="e1">
-                        <img src="assets/img/png/e2.png" alt="" class="e2">
+                        <img loading="lazy" src="assets/img/png/e1.png" alt="" class="e1">
+                        <img loading="lazy" src="assets/img/png/e2.png" alt="" class="e2">
                         <div class="ellipse-item">
-                            <img src="assets/img/png/c1.png" alt="" class="c1">
+                            <img loading="lazy" src="assets/img/png/c1.png" alt="" class="c1">
                         </div>
                     </div> 
                 </div>
@@ -112,10 +112,10 @@
                 </div>
                 <div class="col-lg-6 ps-lg-5 col-12 d-flex justify-content-center justify-content-lg-center mt-5 mt-lg-0">
                     <div class="ellipse ellipse2">
-                        <img src="assets/img/png/e3.png" alt="" class="e3">
-                        <img src="assets/img/png/e4.png" alt="" class="e4">
+                        <img loading="lazy" src="assets/img/png/e3.png" alt="" class="e3">
+                        <img loading="lazy" src="assets/img/png/e4.png" alt="" class="e4">
                         <div class="ellipse-item">
-                            <img src="assets/img/png/c2.png" alt="" class="c1">
+                            <img loading="lazy" src="assets/img/png/c2.png" alt="" class="c1">
                         </div>
                     </div> 
                 </div>
@@ -127,17 +127,17 @@
                 </div>
                 <div class="col-lg-7 ps-lg-5 col-12 mt-5 mt-lg-0">
                     <div class="ellipse ellipse3">
-                        <img src="assets/img/png/e5.png" alt="" class="e5">
-                        <img src="assets/img/png/e6.png" alt="" class="e6">
-                        <img src="assets/img/png/e7.png" alt="" class="e7">
+                        <img loading="lazy" src="assets/img/png/e5.png" alt="" class="e5">
+                        <img loading="lazy" src="assets/img/png/e6.png" alt="" class="e6">
+                        <img loading="lazy" src="assets/img/png/e7.png" alt="" class="e7">
                         <div class="ellipse-item camera">
-                            <img src="assets/img/png/c4.png" alt="" class="c4">
+                            <img loading="lazy" src="assets/img/png/c4.png" alt="" class="c4">
                         </div>
                         <div class="ellipse-item media">
-                            <img src="assets/img/png/c3.png" alt="" class="c3">
+                            <img loading="lazy" src="assets/img/png/c3.png" alt="" class="c3">
                         </div>
                         <div class="ellipse-item save">
-                            <img src="assets/img/png/c5.png" alt="" class="c3">
+                            <img loading="lazy" src="assets/img/png/c5.png" alt="" class="c3">
                         </div>
                     </div> 
                 </div>
@@ -203,7 +203,7 @@
                     <div class="popular-card">
                         <div class="popular-card-img">
                             <a href="#" class="popular-card-img-head">Советы</a>
-                            <img src="assets/img/png/p1.png" alt="">
+                            <img loading="lazy" src="assets/img/png/p1.png" alt="">
                         </div>
                         <a href="#" class="popular-card__title">Как красиво оформить свою страницу</a>
                         <p class="popular-card__text">Если страница блогера оформлена не красиво, не привлекательно и не интересно, то успеха ждать...</p>
@@ -214,7 +214,7 @@
                     <div class="popular-card">
                         <div class="popular-card-img">
                             <a href="#" class="popular-card-img-head head2">Интересное</a>
-                            <img src="assets/img/png/p2.png" alt="">
+                            <img loading="lazy" src="assets/img/png/p2.png" alt="">
                         </div>
                         <a href="#" class="popular-card__title">За что Инстаграм может удалить аккаунт?</a>
                         <p class="popular-card__text">За что Инстаграм может удалить аккаунт?</p>
@@ -225,7 +225,7 @@
                     <div class="popular-card">
                         <div class="popular-card-img">
                             <a href="#" class="popular-card-img-head head3">Инструкции</a>
-                            <img src="assets/img/png/p3.png" alt="">
+                            <img loading="lazy" src="assets/img/png/p3.png" alt="">
                         </div>
                         <a href="#" class="popular-card__title">Где брать идеи для контента в Инстаграм?</a>
                         <p class="popular-card__text">Все пользователи Инстаграма заходят в социальную сеть, чтобы смотреть на красивые картинки...</p>
