--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Главная</title>
-    <link rel="shortcut icon" href="assets/img/png/fav-icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/img/png/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/style/plugin/bootstrap.css">
     <link rel="stylesheet" href="assets/style/css/main.css">
 </head>
@@ -13,14 +13,18 @@
     <header class="header">
         <div class="container">
                 <div class="row position-relative">
-                   <nav class="nav w-100 position-absolute d-flex justify-content-between top-0 start-0">
+                   <nav class="nav w-100 position-absolute d-flex justify-content-between align-items-center top-0 start-0">
                     <div class="col-lg-3 col-sm-4 col-7 position-relative">
-                        <a href="./index.html">
-                            <img loading="lazy" src="assets/img/png/logo.png" alt="logo.png" class="logo w-100 position-absolute">
+                        <a href="./index.html" class="d-flex align-items-center">
+                            <img loading="lazy" src="assets/img/png/logo.png" alt="logo.png" class="logo__img me-2">
+                            <div class="text-white">
+                                <p class="logo__title">Insta Navigation</p>
+                                <p class="logo__sub-title">анонимный просмотр</p>
+                            </div>
                         </a>
                     </div>
                     <div class="col-lg-7 col-md-6">
-                        <ul class="justify-content-between align-items-center mt-1 d-none d-lg-flex">
+                        <ul class="justify-content-between align-items-center d-none d-lg-flex">
                             <li class="nav-list"><a href="#" class="nav-list__link">Посмотреть истории</a></li>
                             <li class="nav-list"><a href="#" class="nav-list__link">Популярные пользователи</a></li>
                             <li class="nav-list"><a href="#" class="nav-list__link">Блог</a></li>
@@ -32,7 +36,7 @@
                                   </ul>
                             </li>
                         </ul>
-                        <div class="menu-burger justify-content-end d-flex d-lg-none mt-3 me-2">
+                        <div class="menu-burger justify-content-end d-flex d-lg-none me-2">
                             <div class="menu-burger-item flex justify-between flex-col">
                                 <div class="menu-burger-list" id="burger_list1"></div>
                                 <div class="menu-burger-list" id="burger_list2"></div>
@@ -44,7 +48,7 @@
                 </div>
         </div>
         <div class="header-item h-100 d-flex justify-content-center align-items-center g-0 px-2 px-sm-0">
-            <div class="text-center">
+            <div class="text-center" id="search">
                 <p class="header__title">Смотреть Инстаграм <br> анонимно</p>
                 <div class="header-search">
                     <input type="text" class="header-search__inp w-100 h-100" placeholder="Имя пользователя или ссылка на профиль">
@@ -239,14 +243,74 @@
 
     <footer class="footer">
         <div class="container">
-            <div class="row"></div>
+            <div class="row my-5 d-lg-none">
+                <div class="col-sm-8">
+                    <div class="d-flex align-items-center">
+                        <img loading="lazy" src="assets/img/png/logo.png" alt="logo.png" class="me-2 footer__logo">
+                            <div class="text-white">
+                            <p class="footer__logo-text">instanavigation.com не связан с Instagram. Все права на контент принадлежат авторам контента. Скачивание доступно только в ознакомительных целях.</p>
+                    </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row d-flex justify-content-between align-items-center flex-wrap-reverse">
+                <div class="col-md-9 col-7">
+                    <ul class="justify-content-between align-items-start align-items-lg-center d-flex flex-column flex-lg-row">
+                        <li class="nav-list"><a href="#" class="nav-list__link">Посмотреть истории</a></li>
+                        <li class="nav-list"><a href="#" class="nav-list__link">Популярные пользователи</a></li>
+                        <li class="nav-list"><a href="#" class="nav-list__link">Блог</a></li>
+                        <li class="nav-list"><a href="#" class="nav-list__link">Возможности</a></li>
+                        <li class="nav-list"><a href="#" class="nav-list__link">Контакты</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3 col-5 d-flex align-items-center justify-content-end ">
+                    <a href="#search" class="footer-search">
+                        <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                        viewBox="0 0 487.95 487.95" style="enable-background:new 0 0 487.95 487.95;" xml:space="preserve">
+                            <path d="M481.8,453l-140-140.1c27.6-33.1,44.2-75.4,44.2-121.6C386,85.9,299.5,0.2,193.1,0.2S0,86,0,191.4s86.5,191.1,192.9,191.1
+                                c45.2,0,86.8-15.5,119.8-41.4l140.5,140.5c8.2,8.2,20.4,8.2,28.6,0C490,473.4,490,461.2,481.8,453z M41,191.4
+                                c0-82.8,68.2-150.1,151.9-150.1s151.9,67.3,151.9,150.1s-68.2,150.1-151.9,150.1S41,274.1,41,191.4z"/>
+                        </svg>
+                    </a>
+                    <div class="lang">
+                        <span class="lang-active"> Ru</span>
+                          <ul class="lang-menu">
+                            <li><a class="lang-item" href="#">Ru</a></li>
+                            <li><a class="lang-item" href="#">En</a></li>
+                          </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="row my-5 d-none d-lg-flex">
+                <div class="col-lg-6">
+                    <div class="d-flex align-items-center">
+                        <img loading="lazy" src="assets/img/png/logo.png" alt="logo.png" class="me-2 footer__logo">
+                            <div class="text-white">
+                            <p class="footer__logo-text">instanavigation.com не связан с Instagram. Все права на контент принадлежат авторам контента. Скачивание доступно только в ознакомительных целях.</p>
+                    </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row d-flex flex-wrap-reverse flex-md-nowrap mt-2 mt-md-0">
+                <div class="col-md-4">
+                    <p class="footer-sub text-white fw-normal">© 2022 Insta Navigation. All rights reserved.</p>
+                </div>
+                <div class="col-md-8 d-flex justify-content-md-end justify-content-center align-items-center flex-wrap mb-4 mb-md-0">
+                    <a href="#" class="footer__link text-white fw-normal me-0 me-sm-5">Пользовательское соглашение</a>
+                    <a href="#" class="footer__link text-white fw-normal">Политика конфиденциальности</a>
+                </div>
+            </div>
         </div>
     </footer>
     
 
     <script src="assets/js/plugin/jquery.js"></script>
-    <script src="assets/js/plugin/popper.js"></script>
-    <script src="assets/js/plugin/bootstrap.js"></script>
     <script src="assets/js/index.js"></script>
+    <script>
+        $('.faq-list').click(function() {
+            $(this).siblings().removeClass('activeFaq');
+            $(this).toggleClass('activeFaq');
+        });
+    </script>
 </body>
 </html>
